# forgeflare-hooks

./: .gitignore  AGENTS.md  Cargo.toml  IMPLEMENTATION_PLAN.md  PROMPT_build.md  PROMPT_plan.md  README.md  loop.sh  mise.toml  renovate.json  supervisor.sh
.claude/hooks/: ralph-activity.sh  ralph-guard.sh
.github/workflows/: ci.yml  release.yml
02/7ce415f028/: metadata.json
03/463af2eab2/: metadata.json
07/4de5e00a73/: metadata.json
09/b13db6ef3c/: metadata.json
0b/4627eda71f/: metadata.json
1d/bc8e1455c2/: metadata.json
1f/4667270bc6/: metadata.json
1f/4f82062d37/: metadata.json
20/0d625e99dc/: metadata.json
26/b818f8048f/: metadata.json
3d/302231924c/: metadata.json
42/d057db5062/: metadata.json
44/bbad19e4ab/: metadata.json
49/4613590a93/: metadata.json
4d/ff4d662861/: metadata.json
5f/62507f8e35/: metadata.json
7b/49aff134ad/: metadata.json
7d/f866a23de2/: metadata.json
81/256be41048/: metadata.json
94/b906c58350/: metadata.json
98/fb43196c02/: metadata.json
9b/0c06140304/: metadata.json
b1/d2ae599ac6/: metadata.json
b6/a316ba229f/: metadata.json
bb/45607c53ae/: metadata.json
cc/80ac0d19ce/: metadata.json
d1/52c43dc7e0/: metadata.json
specs/: README.md  api-endpoint.md  api-retry.md  coding-agent.md  glob-shell-injection.md  hooks.md  maxtoken-continuation.md  project-instructions-loading.md  prompt-caching.md  release-workflow.md  run-turn-refactor.md  session-capture.md  sse-buffer-optimization.md  token-aware-trim.md  tool-name-compliance.md  tool-parallelism.md
src/: api.rs  hooks.rs  main.rs  session.rs
(+302 files in other folders)
