[package]
name = "forgeflare"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "forgeflare"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
futures-util = "0.3"
bytes = "1"
reqwest = { version = "0.12", features = ["stream", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
